# dotfiles

./: .gitignore  README.md  bootstrap.nix  flake.nix  nixpkgs.nix  setup_disk.sh  shell.nix  stylua.toml
hosts/: default.nix
hosts/harrier/: default.nix  hardware-configuration.nix  networking.nix
hosts/lancaster/: configuration.nix  default.nix  hardware-configuration.nix  networking.nix
hosts/spitfire/: configuration.nix  default.nix  gpu.nix  hardware-configuration.nix  networking.nix  printer.nix
hosts/vulcan/: configuration.nix  default.nix  gpu.nix  hardware-configuration.nix  networking.nix  printer.nix
hosts/vulkan/: default.nix  hardware-configuration.nix
lib/: default.nix
modules/home/: crypto.nix  default.nix  firefox.nix  foot.nix  gnome-keyring.nix  go.nix  gschemas.nix  jetbrains-jdk.nix  jetbrains.nix  keybase.nix  kitty.nix  librewolf.nix  mpd.nix  mpv.nix  nix.nix  node.nix  obs.nix  pass.nix  protonmail-bridge.nix  rclone-gdrive.nix  spotify-player.nix  syncthing.nix  tmux.nix  udiskie.nix  uwsm.nix  xdg-portals.nix  zathura.nix  zsh.nix
modules/nixos/: boot.nix  (+60 more)
nixosConfigurations/: default.nix
overlays/: bisq.nix  calibre.nix  default.nix  discord.nix  flameshot-wlr.nix  hyprland.nix  librewolf.nix  neomutt.nix  neovim-plugins.nix  nixpkgs.nix  packages.nix  protonmail-bridge.nix  sdrpp.nix  update-fix.nix  update-fixes.nix  vscoq.nix
pkgs/: default.nix
profiles/: default.nix
templates/: default.nix
templates/cxx-autotools/: .clang-format  .gitignore  AUTHORS  Makefile.am  configure.ac  default.nix  flake.nix  shell.nix
templates/cxx-autotools/src/: hello.c
templates/haskell/: .gitignore  CHANGELOG.md  LICENCE  cabal.project  default.nix  flake.nix  hello.cabal  shell.nix
users/: default.nix
utils/: default.nix
(+225 files in other folders)
