AC_INIT([hello], [0.1.0], [contact@rafaelrc.com], [hello], [http://rafaelrc.com/])

AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([1.16 subdir-objects -Wall -Werror])
AC_PREREQ([2.72])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([src/hello.c])
AC_CONFIG_MACRO_DIRS([m4])

# Checks for programs.
AC_PROG_CC
AC_DEFINE([GNULIB_NO_VLA], [1], [Define to 1 to disable use of VLAs])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

