cabal-version:   3.0
name:            hello
version:         0.1.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENCE
author:          rafaelrc7
maintainer:      contact@rafaelrc.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:    base ^>=4.18.2.1
  hs-source-dirs:   src
  default-language: Haskell2010

executable hello
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base   ^>=4.18.2.1
    , hello

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite hello-test
  import:           warnings
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base   ^>=4.18.2.1
    , hello
